[package]
name = "system-firmware-led"
version = "0.1.0"
authors = ["PfMartin <martinpfatrisch@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "system-firmware-led"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
anyhow = "1.0.75"
embedded-svc = "0.28.0"
esp-idf-hal = "0.44.1"
esp-idf-sys = "0.35.0"
url = "2.4.1"
toml-cfg = "0.2.0"
smart-leds = "0.3.0"
ws2812-esp32-rmt-driver = "0.6.0"
heapless = "0.8.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.124"


[build-dependencies]
embuild = "0.32.0"
